@@ -1,8 +1,8 @@
 source :gemcutter
 
 # Rails 3.0
-gem 'rails',        '3.0.0.beta3'
-gem 'rspec',        '2.0.0.beta.8'
+gem 'rails',        '>=3.0.0.beta3'
+gem 'rspec',        '>=2.0.0.beta.8'
 gem 'sqlite3-ruby', :require => 'sqlite3'
 gem 'mysql'
 gem 'pg'
