@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Michael Bleigh"]
-  s.date = %q{2010-05-19}
+  s.date = %q{2010-12-03}
   s.description = %q{With ActsAsTaggableOn, you could tag a single model on several contexts, such as skills, interests, and awards. It also provides other advanced functionality.}
   s.email = %q{michael@intridea.com}
   s.extra_rdoc_files = [
@@ -22,8 +22,6 @@ Gem::Specification.new do |s|
      "README.rdoc",
      "Rakefile",
      "VERSION",
-     "generators/acts_as_taggable_on_migration/acts_as_taggable_on_migration_generator.rb",
-     "generators/acts_as_taggable_on_migration/templates/migration.rb",
      "lib/acts-as-taggable-on.rb",
      "lib/acts_as_taggable_on/acts_as_taggable_on.rb",
      "lib/acts_as_taggable_on/acts_as_taggable_on/cache.rb",
@@ -32,9 +30,6 @@ Gem::Specification.new do |s|
      "lib/acts_as_taggable_on/acts_as_taggable_on/ownership.rb",
      "lib/acts_as_taggable_on/acts_as_taggable_on/related.rb",
      "lib/acts_as_taggable_on/acts_as_tagger.rb",
-     "lib/acts_as_taggable_on/compatibility/Gemfile",
-     "lib/acts_as_taggable_on/compatibility/active_record_backports.rb",
-     "lib/acts_as_taggable_on/compatibility/postgresql.rb",
      "lib/acts_as_taggable_on/tag.rb",
      "lib/acts_as_taggable_on/tag_list.rb",
      "lib/acts_as_taggable_on/tagging.rb",
@@ -51,7 +46,6 @@ Gem::Specification.new do |s|
      "spec/acts_as_taggable_on/tagging_spec.rb",
      "spec/acts_as_taggable_on/tags_helper_spec.rb",
      "spec/bm.rb",
-     "spec/database.yml",
      "spec/database.yml.sample",
      "spec/models.rb",
      "spec/schema.rb",
@@ -60,7 +54,7 @@ Gem::Specification.new do |s|
   s.homepage = %q{http://github.com/mbleigh/acts-as-taggable-on}
   s.rdoc_options = ["--charset=UTF-8"]
   s.require_paths = ["lib"]
-  s.rubygems_version = %q{1.3.6}
+  s.rubygems_version = %q{1.3.7}
   s.summary = %q{ActsAsTaggableOn is a tagging plugin for Rails that provides multiple tagging contexts on a single model.}
   s.test_files = [
     "spec/acts_as_taggable_on/acts_as_taggable_on_spec.rb",
@@ -81,7 +75,7 @@ Gem::Specification.new do |s|
     current_version = Gem::Specification::CURRENT_SPECIFICATION_VERSION
     s.specification_version = 3
 
-    if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
+    if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
     else
     end
   else
