@@ -1,7 +1,0 @@
-class ActsAsTaggableOnMigrationGenerator < Rails::Generator::Base 
-  def manifest 
-    record do |m| 
-      m.migration_template 'migration.rb', 'db/migrate', :migration_file_name => "acts_as_taggable_on_migration"
-    end
-  end
-end
