@@ -1,7 +1,5 @@
 module ActsAsTaggableOn
   class Tag < ::ActiveRecord::Base
-    include ActsAsTaggableOn::ActiveRecord::Backports if ::ActiveRecord::VERSION::MAJOR < 3
-  
     attr_accessible :name
 
     ### ASSOCIATIONS:
