@@ -1,3 +1,6 @@
+== 2010-12-03 - JDF
+
+* Ditch backward-compatibility in favor of more Rails-esque code.
 == 2010-02-17
 * Converted the plugin to be compatible with Rails3
 
